--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,17 +39,19 @@ section {
 }
 
 header {
-  display: flex;
-  justify-content: center;
-  margin-top: 0.75rem;
+  margin-top: 1.5rem;
 }
 
-/* #profile-large-browser {
+#pic-text-container {
   display: flex;
-  align-items: center;
   justify-content: center;
-  gap: 0.75rem;
-} */
+  align-items: center;
+  gap: 0.5rem;
+}
+
+#pic-text-container:hover {
+  transform: scale(1.1);
+}
 
 #logo-text {
   display: flex;
@@ -57,12 +59,12 @@ header {
 }
 
 header img {
-  width: 10rem;
+  width: 8rem;
   border-radius: 50%;
 }
 
 header h1 {
-  font-size: 7rem;
+  font-size: 6rem;
 }
 
 header p {
@@ -72,18 +74,14 @@ header p {
   margin-top: 7rem;
 }
 
-/* #profile-large-browser:hover {
-  transform: scale(1.15);
-} */
-
 #drop-down {
   position: absolute;
-  margin-top: 2rem;
-  margin-left: 6rem;
+  top: 1.5rem;
+  right: 3rem;
 }
 
 #drop-down:hover {
-  transform: scale(1.5);
+  transform: scale(1.2);
 }
 
 #drop-down-bars {
@@ -149,6 +147,7 @@ header p {
   width: 100%;
   margin-bottom: 0.2rem;
 }
+  */
 
 .yt-vid {
   border-radius: 1.5rem;
@@ -157,4 +156,4 @@ header p {
 
 .yt-vid:hover {
   transform: scale(1.15);
-} */
+}
