--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -157,3 +157,32 @@ header p {
 .yt-vid:hover {
   transform: scale(1.15);
 }
+
+.youtube-thumbnail-container {
+  position: "relative";
+  cursor: "pointer";
+  display: "inline-block";
+}
+
+.youtube-thumbnail {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.youtube-play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  transition: all 0.3s ease;
+}
