--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -77,7 +77,7 @@ header p {
 #drop-down {
   position: absolute;
   top: 1.5rem;
-  right: 3rem;
+  right: 7rem;
 }
 
 #drop-down:hover {
@@ -105,7 +105,7 @@ header p {
   box-shadow: 5px 5px 5px 0 rgba(0, 0, 0, 0.5);
   background-color: white;
   border-radius: 10px;
-  display: none;
+  /* display: none; */
 }
 
 #drop-down-menu-display h2 {
@@ -156,4 +156,8 @@ header p {
 
 .yt-vid:hover {
   transform: scale(1.15);
+}
+
+.hidden {
+  display: none;
 }
