--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -64,7 +64,7 @@ header img {
 }
 
 header h1 {
-  font-size: 6rem;
+  font-size: 7rem;
 }
 
 header p {
@@ -124,7 +124,7 @@ header p {
   display: flex;
   justify-content: center;
   gap: 2rem;
-  margin-top: 0.3rem;
+  margin-top: 2rem;
   margin-bottom: 0.8rem;
 }
 
@@ -135,19 +135,18 @@ header p {
 #socials img:hover {
   transform: scale(2);
 }
-/* 
-#large-browser {
+
+#vid-display {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 3rem;
 }
 
-#large-browser iframe {
+#vid-display iframe {
   width: 100%;
   margin-bottom: 0.2rem;
 }
-  */
 
 .yt-vid {
   border-radius: 1.5rem;
