--- a/public/css/media-styles.css
+++ b/public/css/media-styles.css
@@ -1,41 +1,8 @@
 /* SMALL LAPTOPS*/
 @media (max-width: 1600px) {
   #background-pic {
-    content: url("../images/WNTW_final_pic_crop1.jpg");
+    /* content: url("../images/WNTW_background_crop1.jpg"); */
     opacity: 0.3;
-  }
-
-  #medium-browser,
-  #profile-small-browser {
-    display: block;
-  }
-
-  #yt-shorts-row-big,
-  #yt-vids-row-big {
-    margin-top: 1rem;
-    display: flex;
-    gap: 2rem;
-    justify-content: center;
-  }
-
-  #profile-large-browser,
-  #large-browser,
-  #small-browser,
-  #tiny-browser,
-  #miniscule-browser,
-  #stupid-browser,
-  #yt-shorts-row-small,
-  #yt-vids-row-small,
-  #yt-vids-row-tiny {
-    display: none;
-  }
-
-  .yt-vid:hover {
-    transform: none;
-  }
-
-  #profile-small-browser {
-    margin-bottom: 1.5rem;
   }
 
   header a {
@@ -92,7 +59,7 @@
 /* IPAD STYLES PORTRAIT*/
 @media (max-device-width: 1100px) and (orientation: portrait) {
   #background-pic {
-    content: url("../images/WNTW_final_pic_crop1.jpg");
+    /* content: url("../images/WNTW_final_pic_crop1.jpg"); */
     opacity: 0.3;
   }
 
@@ -162,7 +129,7 @@
 
 @media (max-device-width: 900px) and (orientation: portrait) {
   #background-pic {
-    content: url("../images/WNTW_final_pic_crop1.jpg");
+    /* content: url("../images/WNTW_final_pic_crop1.jpg"); */
     opacity: 0.3;
   }
 
@@ -226,7 +193,7 @@
 
 @media (max-device-width: 700px) and (orientation: portrait) {
   #background-pic {
-    content: url("../images/WNTW_final_pic_crop1.jpg");
+    /* content: url("../images/WNTW_final_pic_crop1.jpg"); */
     opacity: 0.3;
   }
 
@@ -307,7 +274,7 @@
 
 @media (max-device-width: 560px) and (orientation: portrait) {
   #background-pic {
-    content: url("../images/WNTW_final_pic_crop1.jpg");
+    /* content: url("../images/WNTW_final_pic_crop1.jpg"); */
     opacity: 0.3;
   }
 
@@ -367,7 +334,7 @@
 /* PHONE STYLES PORTRAIT */
 @media (max-device-width: 500px) and (orientation: portrait) {
   #background-pic {
-    content: url("../images/WNTW_final_pic_crop7.jpg");
+    /* content: url("../images/WNTW_final_pic_crop7.jpg"); */
     opacity: 0.4;
   }
 
@@ -441,7 +408,7 @@
 
 @media (max-device-width: 415px) and (orientation: portrait) {
   #background-pic {
-    content: url("../images/WNTW_final_pic_crop7.jpg");
+    /* content: url("../images/WNTW_final_pic_crop7.jpg"); */
     opacity: 0.4;
   }
 
@@ -497,7 +464,7 @@
 
 @media (max-device-width: 350px) and (orientation: portrait) {
   #background-pic {
-    content: url("../images/WNTW_final_pic_crop7.jpg");
+    /* content: url("../images/WNTW_final_pic_crop7.jpg"); */
     opacity: 0.4;
   }
 
@@ -540,7 +507,7 @@
 
 @media (max-device-width: 300px) and (orientation: portrait) {
   #background-pic {
-    content: url("../images/WNTW_final_pic_crop7.jpg");
+    /* content: url("../images/WNTW_final_pic_crop7.jpg"); */
     opacity: 0.4;
   }
 
@@ -579,7 +546,7 @@
 
 @media (max-device-width: 700px) and (orientation: landscape) {
   #background-pic {
-    content: url("../images/WNTW_final_pic_crop7.jpg");
+    /* content: url("../images/WNTW_final_pic_crop7.jpg"); */
     opacity: 0.4;
   }
 
@@ -639,7 +606,7 @@
 
 @media (max-device-width: 1150px) and (orientation: landscape) {
   #background-pic {
-    content: url("../images/WNTW_final_pic_crop7.jpg");
+    /* content: url("../images/WNTW_final_pic_crop7.jpg"); */
     opacity: 0.4;
   }
 
