--- a/public/css/media-styles.css
+++ b/public/css/media-styles.css
@@ -1,25 +1,37 @@
 /* SMALL LAPTOPS*/
 @media (max-width: 1600px) {
-}
-
-/* TABLE STYLES PORTRAIT*/
-@media (max-device-width: 1024px) and (orientation: portrait) {
-  header img {
-    width: 10rem;
-  }
-
   header h1 {
-    font-size: 4rem;
-  }
-
-  header p {
-    font-size: 1.4rem;
-    margin-top: 4rem;
+    font-size: 6rem;
   }
 
   #drop-down {
-    margin-top: 3.5rem;
-    margin-left: -5rem;
+    right: 3rem;
+  }
+
+  #drop-down-menu-display {
+    margin-left: -3.5rem;
+  }
+
+  #drop-down-menu-display h2 {
+    font-size: 2rem;
+  }
+
+  #vid-display {
+    margin-right: 3rem;
+  }
+
+  header p {
+    margin-top: 7rem;
+  }
+}
+
+@media (max-width: 1350px) {
+  header h1 {
+    font-size: 5rem;
+  }
+
+  header img {
+    width: 6rem;
   }
 
   #drop-down-bars {
@@ -31,8 +43,26 @@
     height: 0.25rem;
   }
 
-  #drop-down-menu-display {
-    margin-left: -2.4rem;
+  header p {
+    margin-top: 5rem;
+  }
+}
+
+/* HERE!!! */
+
+/* TABLE STYLES PORTRAIT*/
+@media (max-device-width: 1100px) and (orientation: portrait) {
+  header img {
+    width: 10rem;
+  }
+
+  header h1 {
+    font-size: 4rem;
+  }
+
+  header p {
+    font-size: 1.4rem;
+    margin-top: 4rem;
   }
 
   #drop-down-menu-display h2 {
