--- a/public/css/media-styles.css
+++ b/public/css/media-styles.css
@@ -17,7 +17,7 @@
   }
 
   #vid-display {
-    margin-right: 3rem;
+    margin-right: 1rem;
   }
 
   header p {
@@ -46,24 +46,35 @@
   header p {
     margin-top: 5rem;
   }
-}
 
-/* HERE!!! */
+  #vid-display {
+    margin-right: 0;
+  }
+}
 
 /* TABLE STYLES PORTRAIT*/
 @media (max-device-width: 1100px) and (orientation: portrait) {
-  header img {
-    width: 10rem;
+  header h1 {
+    font-size: 3.5rem;
   }
 
-  header h1 {
-    font-size: 4rem;
+  header img {
+    width: 4rem;
   }
 
   header p {
-    font-size: 1.4rem;
-    margin-top: 4rem;
+    font-size: 1.2rem;
+    margin-top: 3.7rem;
   }
+
+  #drop-down {
+    right: 2rem;
+  }
+
+  #drop-down-menu-display {
+    margin-left: -3rem;
+  }
+
 
   #drop-down-menu-display h2 {
     font-size: 1.7rem;
@@ -72,16 +83,42 @@
 
   #socials {
     gap: 1.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
   }
 
   #socials img {
-    height: 4.5rem;
+    height: 3rem;
+  }
+
+  #vid-display {
+    display: block;
+  }
+
+  #tablet-row1 {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+  }
+
+  #tablet-row1 iframe {
+    width: auto;
+  }
+
+  #tablet-row2 {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    width: 100%;
+  }
+
+  #tablet-row2 iframe {
+    width: 90%;
   }
 }
 
 /* BIG PHONE STYLES PORTRAIT*/
-@media (max-device-width: 768px) and (orientation: portrait) {
+/* @media (max-device-width: 768px) and (orientation: portrait) {
   header img {
     width: 8rem;
   }
@@ -116,10 +153,10 @@
   #socials img {
     height: 3.5rem;
   }
-}
+} */
 
 /* SMALL PHONE STYLES PORTRAIT*/
-@media (max-device-width: 401px) and (orientation: portrait) {
+/* @media (max-device-width: 401px) and (orientation: portrait) {
   header img {
     width: 6rem;
   }
@@ -141,7 +178,7 @@
   #socials img {
     height: 3rem;
   }
-}
+} */
 
 /* PHONE STYLES LANDSCAPE */
 
