on phone styles

--- a/public/css/media-styles.css
+++ b/public/css/media-styles.css
@@ -75,7 +75,6 @@
     margin-left: -3rem;
   }
 
-
   #drop-down-menu-display h2 {
     font-size: 1.7rem;
     padding: 0.5rem 1.2rem;
@@ -118,7 +117,7 @@
 }
 
 /* BIG PHONE STYLES PORTRAIT*/
-/* @media (max-device-width: 768px) and (orientation: portrait) {
+@media (max-device-width: 768px) and (orientation: portrait) {
   header img {
     width: 8rem;
   }
@@ -153,7 +152,21 @@
   #socials img {
     height: 3.5rem;
   }
-} */
+
+  #bigPhone-row1 {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+  }
+
+  #bigPhone-row1 iframe {
+    width: auto;
+  }
+
+  #bigPhone-row2 {
+    margin-top: 1rem;
+  }
+}
 
 /* SMALL PHONE STYLES PORTRAIT*/
 /* @media (max-device-width: 401px) and (orientation: portrait) {
