--- a/public/css/media-styles.css
+++ b/public/css/media-styles.css
@@ -194,12 +194,56 @@
   }
 }
 
-/* PHONE STYLES LANDSCAPE */
+/* ------------------------------------------------------------ */
 
-/* @media (max-device-width: 700px) and (orientation: landscape) {
+/* PHONE / TABLET STYLES LANDSCAPE (define for all possibilities) */
+@media (max-device-width: 1100px) and (orientation: landscape) {
+  #vid-display {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 
+  #tablet-row1 {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  }
 
-  header img {
+  #tablet-row2 {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  }
+
+  #bigPhone-row1 {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  }
+
+  #bigPhone-row2 {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  }
+
+  #smallPhone-row1 {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  }
+
+  #smallPhone-row2 {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  }
+
+  /* header img {
     width: 8rem;
   }
 
@@ -236,8 +280,8 @@
 
   #socials img {
     height: 3.5rem;
-  }
-} */
+  } */
+}
 
 /* @media (max-device-width: 1150px) and (orientation: landscape) {
   header {
