--- a/public/css/media-styles.css
+++ b/public/css/media-styles.css
@@ -135,6 +135,7 @@
 
   #drop-down {
     right: 3rem;
+    top: 1rem;
   }
 
   #drop-down-menu-display {
@@ -149,12 +150,18 @@
   #bigPhone-row1 {
     display: flex;
     justify-content: center;
+    gap: 0.5rem;
   }
 
   #bigPhone-row2 {
     margin-top: 1rem;
     display: flex;
     justify-content: center;
+  }
+
+  /* change error font size */
+  h3 {
+    font-size: 2rem;
   }
 }
 
@@ -185,6 +192,7 @@
   #smallPhone-row1 {
     display: flex;
     justify-content: center;
+    gap: 0.5rem;
   }
 
   #smallPhone-row2 {
@@ -242,107 +250,4 @@
     flex-direction: row;
     gap: 1rem;
   }
-
-  /* header img {
-    width: 8rem;
-  }
-
-  header h1 {
-    font-size: 2.5rem;
-  }
-
-  header p {
-    margin-top: 2.6rem;
-  }
-
-  #drop-down-bars {
-    width: 3rem;
-    height: 3rem;
-  }
-
-  #drop-down a span {
-    height: 0.25rem;
-  }
-
-  #drop-down-menu-display {
-    margin-left: -1.5rem;
-  }
-
-  #drop-down-menu-display h2 {
-    font-size: 1.2rem;
-    padding: 0.5rem 1rem;
-  }
-
-  #socials {
-    margin-top: -0.25rem;
-    margin-bottom: 0.75rem;
-  }
-
-  #socials img {
-    height: 3.5rem;
-  } */
 }
-
-/* @media (max-device-width: 1150px) and (orientation: landscape) {
-  header {
-    margin-top: 0;
-  }
-
-  header img {
-    width: 9rem;
-  }
-
-  header h1 {
-    margin-top: 0.1rem;
-    font-size: 3rem;
-  }
-
-  header p {
-    font-size: 1rem;
-    margin-top: 3.1rem;
-  }
-
-  #drop-down {
-    margin-top: 3rem;
-    margin-left: -4.5rem;
-  }
-
-  #drop-down-bars {
-    width: 3rem;
-    height: 3rem;
-  }
-
-  #drop-down a span {
-    height: 0.25rem;
-  }
-
-  #drop-down-menu-display {
-    margin-left: -2.2rem;
-  }
-
-  #drop-down-menu-display h2 {
-    font-size: 1.5rem;
-    padding: 0.5rem 1.2rem;
-  }
-
-  #socials {
-    gap: 1rem;
-    margin-top: -0.25rem;
-    margin-bottom: 1rem;
-  }
-
-  #socials img {
-    height: 3.5rem;
-  }
-
-  #yt-shorts-row-big {
-    margin-top: 1rem;
-    display: flex;
-    gap: 0.5rem;
-    justify-content: center;
-  }
-
-  #yt-vid-wide {
-    margin-top: 0.5rem;
-  }
-} */
